--- a/views/createAccount.handlebars
+++ b/views/createAccount.handlebars
@@ -9,28 +9,28 @@
         <div>
             <form  method="POST" id="registration-form" action="">
                 <label for="firstNameInput">Enter Your First Name:</label>
-                <input id="firstNameInput" type="text" name="firstNameInput" placeholder="ex: John" required><br>
+                <input id="firstNameInput" type="text" name="firstNameInput" placeholder="ex: John"><br>
 
                 <label for="lastNameInput">Enter Your Last Name:</label>
-                <input id="lastNameInput" type="text" name="lastNameInput" placeholder="ex: Doe" required><br>
+                <input id="lastNameInput" type="text" name="lastNameInput" placeholder="ex: Doe"><br>
                 
                 <label for="emailAddressInput">Enter Your Email:</label>
-                <input id="emailAddressInput" type="email" name="emailAddressInput" placeholder="ex: JDoe@gmail.com" required><br>
+                <input id="emailAddressInput" type="email" name="emailAddressInput" placeholder="ex: JDoe@gmail.com"><br>
                 
                 <label for="usernameInput">Enter Your Username:</label>
-                <input id="usernameInput" type="text" name="usernameInput" placeholder="ex: JohnTheDoeMan" required><br>
+                <input id="usernameInput" type="text" name="usernameInput" placeholder="ex: JohnTheDoeMan"><br>
                 
                 <label for="passwordInput">Enter Your Password:</label>
-                <input id="passwordInput" type="password" name="passwordInput" required><br>
+                <input id="passwordInput" type="password" name="passwordInput"><br>
                 
                 <label for="confirmPasswordInput">Confirm Your Password:</label>
-                <input id="confirmPasswordInput" type="password" name="confirmPasswordInput" required><br>
+                <input id="confirmPasswordInput" type="password" name="confirmPasswordInput"><br>
 
                 <label for="DOBInput">Date of Birth:</label>
-                <input id="DOBInput" type="date" name="DOBInput" placeholder="YYYY-MM-DD" required><br>
+                <input id="DOBInput" type="date" name="DOBInput" placeholder="YYYY-MM-DD"><br>
                 
                 <label for="cityInput">City:</label>
-                <input id="cityInput" type="text" name="cityInput" required><br>
+                <input id="cityInput" type="text" name="cityInput"><br>
 
                 <label for="stateInput">State:</label>
                 <select id="stateInput" name="stateInput" required>
@@ -95,14 +95,14 @@
             </form>
            <a href="http://localhost:3000/login">Already have an account? Click here to log-in</a>
         </div>
-    <p id="errorFirstName"  class="error" hidden></p>
-    <p id="errorLastName" class="error"  hidden></p>
-    <p id="errorEmail" class="error"  hidden></p>
-    <p id="errorUsername" class="error"  hidden></p>
-    <p id="errorPassword" class="error"  hidden></p>
-    <p id="errorConfirm" class="error"  hidden></p>
-    <p id="errorDOB" class="error"  hidden></p>
-    <p id="errorCity" class="error"  hidden></p>
-    <p id="errorState" class="error"  hidden></p>
-    <p id="errorBio" class="error" hidden></p>
+    <p id="errorFirstName" hidden></p>
+    <p id="errorLastName" hidden></p>
+    <p id="errorEmail" hidden></p>
+    <p id="errorUsername" hidden></p>
+    <p id="errorPassword" hidden></p>
+    <p id="errorConfirm" hidden></p>
+    <p id="errorDOB" hidden></p>
+    <p id="errorCity" hidden></p>
+    <p id="errorState" hidden></p>
+    <p id="errorBio" hidden></p>
     <script src="../public/js/createAccountCheck.js"></script>
